Add swagger doc for update user api
